[gd_scene load_steps=3 format=3 uid="uid://be26o0f2gwnrv"]

[ext_resource type="Script" path="res://scenes/ui/login.gd" id="1_bkfkf"]
[ext_resource type="Texture2D" uid="uid://lfhpolapfy1" path="res://assets/discord-mark-white.png" id="2_p33bu"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bkfkf")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.435294, 0.435294, 0.435294, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 28.0
offset_top = 16.0
offset_right = 1891.0
offset_bottom = 1064.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="ErrorMsg" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="LoginButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Login to Discord"
icon = ExtResource("2_p33bu")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="LeaveButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Leave Server"

[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
